--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "cross-env NEXT_USE_TURBOPACK=false next build",
-    "start": "next start",
     "dev": "next dev",
+    "build": "cross-env NEXT_USE_TURBOPACK=false next build",
+    "export": "next export",
+    "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
